gateway,expense Add Swagger configuration and Expense module. In the Expense module, Category and Expense entities along with their related classes have been added.

--- a/expense/src/main/resources/application.properties
+++ b/expense/src/main/resources/application.properties
@@ -1,5 +1,7 @@
-spring.application.name=auth
-server.port=9090
+server.port=7070
+spring.application.name=expense
+
+server.servlet.context-path=/expense
 
 spring.datasource.url=jdbc:oracle:thin:@//NIKNAZ-PC:15432/EXPENSE_TRACKER_DB
 spring.datasource.username=auth_db
