--- a/auth/pom.xml
+++ b/auth/pom.xml
@@ -4,12 +4,14 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.sample</groupId>
-        <artifactId>parent</artifactId>
+        <artifactId>expenseTracker</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath>../pom.xml</relativePath>
     </parent>
+
     <artifactId>auth</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
