expense Add configuration for Kafka Streams processing

--- a/expense/src/main/resources/application.properties
+++ b/expense/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.password=auth_db
 
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+
+spring.cloud.stream.kafka.binder.brokers=localhost:9092
