--- a/expense/pom.xml
+++ b/expense/pom.xml
@@ -23,7 +23,10 @@
 			<artifactId>ojdbc11</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-stream-binder-kafka-streams</artifactId>
+		</dependency>
 	</dependencies>
 
 
