--- a/expense/src/main/resources/application.yml
+++ b/expense/src/main/resources/application.yml
@@ -1,7 +1,19 @@
 spring:
   cloud:
     stream:
+      kafka:
+        binder:
+          brokers: localhost:9092
+          configuration:
+            key.serializer: org.apache.kafka.common.serialization.StringSerializer
+            default.value.serde: org.springframework.kafka.support.serializer.JsonSerde
+            spring.json.trusted.packages: "*"
+        streams:
+          binder:
+            application-id: expense-tracker-app
       bindings:
+        sendExpenseEvent-out-0:
+          destination: expense-processor
         processExpense-in-0:
           destination: expense-processor
           content-type: application/json
